- Added mat-breadcrumb - Added xp-finder-behavior - Added xp-master-behavior - Added xp-slave-behavior - Major documentation improvements - Minor bug fixes - Moved item finding from xp-selected-behavior to xp-finder-behavior - Replaced xp-master-state with xp-master-behavior - Replaced xp-slave-state with xp-slave-behavior

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "xp-slave-behavior",
   "license": "BSD-3-Clause",
   "version": "0.9.6",
-  "description": "A behavior used to add slave capabilities on the context element for a master-slave pattern.",
+  "description": "A behavior used to add slave capabilities on the context element for a master-slave pattern",
   "homepage": "http://expandjs.com/elements/xp-slave-behavior",
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
